--- a/src/pringuin/DataprivacyBundle/Resources/public/js/tarteaucitron/css/tarteaucitron.css
+++ b/src/pringuin/DataprivacyBundle/Resources/public/js/tarteaucitron/css/tarteaucitron.css
@@ -202,9 +202,8 @@ div#tarteaucitronServices {
 
 #tarteaucitronRoot * {
     box-sizing: initial;
-    color: #333;
-    font-family: sans-serif !important;
-    font-size: 14px;
+    /*color: #333;*/
+    /*font-size: 14px;*/
     line-height: normal;
     vertical-align: initial;
 }
